[package]
name = "mun_examples"
version = "0.1.0"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2018"
description = "Collection of Mun example games"
documentation = "https://docs.mun-lang.org/v0.2"
readme = "README.md"
homepage = "https://mun-lang.org"
repository = "https://github.com/mun-lang/mun"
license = "MIT OR Apache-2.0"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories = ["Game development", "Mun"]

[dependencies]
ggez = "0.5.1"
mun_runtime = "0.2.0"
rand = "0.7"
tetra = "0.4"